--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
     <input type="text" id="signup-username" placeholder="Username">
     <input type="email" id="signup-email" placeholder="Email">
     <input type="password" id="signup-password" placeholder="Password">
+    <input type="name" id="signup-name" placeholder="Full Name">
+    <input type="date" id="signup-birthday" name="birthday" required>
+    <textarea id="signup-address" name="address" rows="3" cols="30" required></textarea><br><br>
     <button onclick="signup()">Sign Up</button>
 
     <h2>Confirmation Code</h2>
