updating region for AWS Lex use

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
     <input type="name" id="signup-name" placeholder="Full Name">
     <input type="date" id="signup-birthday" name="birthday" required>
     <textarea id="signup-address" name="address" rows="3" cols="30" required></textarea><br><br>
+    <input type="text" id="phone-num" placeholder="phone number">
     <button onclick="signup()">Sign Up</button>
 
     <h2>Confirmation Code</h2>
