--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -42,8 +42,8 @@ h2 {
   margin-bottom: 25px;
 }
 
-/* Input Fields */
-.input-field {
+/* Input and Select Fields */
+.input-field, select {
   width: calc(100% - 20px); /* Ensures it fits inside the container with padding */
   padding: 14px;
   margin: 16px 0; /* Increased spacing */
@@ -56,7 +56,7 @@ h2 {
   box-sizing: border-box;
 }
 
-.input-field:focus {
+.input-field, select:focus {
   border: 2px solid #82aaff;
   box-shadow: 0px 0px 10px rgba(130, 170, 255, 0.4);
 }
